<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E8D10B">
    <ImageView
        android:src="@drawable/khuyenmaipiza"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/name_logout_title"
        android:gravity="center"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/but_logout_Cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/but_logout_OK"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:background="@drawable/button_order"
            />
    </LinearLayout>
</LinearLayout>