<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideCart02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideCart01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <RelativeLayout
        android:id="@+id/relaCart"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/border_black"
        app:layout_constraintEnd_toEndOf="@id/guideCart02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_bgblue_colorwhite"
            android:padding="10dp"
            android:text="@string/cart"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/border_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideCart02"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvDaGiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_bgwhite_colorblack"
            android:padding="10dp"
            android:text="@string/delivered"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideCart01"
        app:layout_constraintTop_toBottomOf="@id/relaCart">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dataGioHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layoutAddressOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borderyellow_bgwhite"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/dataGioHang">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/confirm_info_order"
                    android:textColor="#E8190A"
                    android:textSize="15dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPhoneNumber"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/NumberPhone"
                    android:textColorHint="#5A05F3"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/shaper_register"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="0dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/your_name"
                    android:textColorHint="#5A05F3"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/shaper_register"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="0dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCity"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:hint="@string/city"
                        android:textColorHint="#5A05F3"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxStrokeColor="@color/shaper_register"
                        app:errorEnabled="true">

                        <AutoCompleteTextView
                            android:id="@+id/acCity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textNoSuggestions"
                            android:padding="0dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilDistrict"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:hint="@string/district"
                        android:textColorHint="#5A05F3"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxStrokeColor="@color/shaper_register"
                        app:errorEnabled="true">

                        <AutoCompleteTextView
                            android:id="@+id/acDistrict"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textNoSuggestions"
                            android:padding="0dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAddress"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/name_address"
                    android:textColorHint="#5A05F3"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/shaper_register"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="0dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideCart01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_maGiamGia"
            android:text="@string/discount"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_maGiamGia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/VND"
            android:text="0"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/VND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_chonMaGiamGia"
            android:text=" VND"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_chonMaGiamGia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/chooce"
            android:textColor="#0627DF" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butOrderCart"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_chonMaGiamGia"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/but_order_cart"
            android:text="@string/order"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/butOrderCart"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:text="@string/wishes" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>